# authorization-server

./: .coveragerc  .cyclo  .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  improvements.md  junit.xml  package-lock.json  package.json  pyproject.toml  pytest.ini  release.config.js  sample.env  setup.sh  tasks.py
.github/workflows/: ci.yaml  release.yaml
.run/: Unit.run.xml  main.run.xml
app/: conf.py  database.py  dependencies.py  main.py  security.py  utils.py
app/models/: client.py  token.py  user.py
app/repositories/: client.py  client_repository.py  user.py  user_repository.py
app/routes/: auth.py  client.py  clients.py  probes.py  user.py  users.py
app/schemas/: client.py  detail.py  status.py  user.py
app/services/: client.py  user.py
cli/: hash.py
tests/: conftest.py  junit.xml
tests/unit/: conftest.py  junit.xml  test_clients.py
tests/unit/app/: junit.xml  test_dependencies.py  test_security.py  test_utils.py
tests/unit/app/repositories/: test_client.py  test_user.py  test_user_repository.py
tests/unit/app/services/: test_client.py  test_user.py
